force-app/main/default/objects/Joint_Sales__c/Joint_Sales__c.object-meta.xml
<CustomObject>
    <label>Joint Sales</label>
    <nameField>
        <displayFormat>JS-{000000}</displayFormat>
        <label>Joint Sales Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Joint Sales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>