force-app/main/default/objects/Joint_Sales__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Joint Sales</relationshipLabel>
    <relationshipName>Joint_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>