force-app/main/default/objects/Joint_Sales__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Joint_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>