force-app/main/default/objects/Joint_Sales__c/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Referral Date/Time</label>
    <type>DateTime</type>
</CustomField>