force-app/main/default/objects/Joint_Sales__c/fields/Customer_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Customer_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Opt Out</label>
    <type>Checkbox</type>
</CustomField>