force-app/main/default/objects/Joint_Sales__c/fields/Joint_Sales_Po1__c.field-meta.xml
<CustomField>
    <fullName>Joint_Sales_Po1__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-131</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Joint Sales Po1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>