force-app/main/default/objects/Joint_Sales__c/fields/Mailing_Name__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Name__c</fullName>
    <formula>IF(ISBLANK( Partner__r.LegalCompanyName__c ),Partner__r.Name, Partner__r.LegalCompanyName__c )</formula>
    <label>Mailing Name</label>
    <type>Text</type>
</CustomField>