force-app/main/default/objects/Joint_Sales__c/fields/Rejected__c.field-meta.xml
<CustomField>
    <fullName>Rejected__c</fullName>
    <label>Rejected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wrong contact details</fullName>
            </value>
            <value>
                <fullName>Did not know about the project</fullName>
            </value>
            <value>
                <fullName>Already in contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>