force-app/main/default/objects/Joint_Sales__c/validationRules/Restriction_to_revoke_Opt_Out.validationRule-meta.xml
<ValidationRule>
    <fullName>Restriction_to_revoke_Opt_Out</fullName>
    <active>true</active>
    <description>Only PaM and Sysadmins should be able to revoke an Opt out (uncheck the checkbox)</description>
    <errorConditionFormula>AND( 

NOT(CONTAINS( $Label.Admin_Users , $User.Id )), 
$User.ProfileId &lt;&gt; &quot;00e58000000SLnr&quot; , /* Partner Man */ 

ISCHANGED( Customer_Opt_Out__c ), 

Customer_Opt_Out__c = false
)</errorConditionFormula>
    <errorDisplayField>Customer_Opt_Out__c</errorDisplayField>
    <errorMessage>You are not allowed to uncheck Customer Opt Out. Please contact Partner Management in order to uncheck the box</errorMessage>
</ValidationRule>