force-app/main/default/objects/Joint_Sales__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Token__c</columns>
    <columns>Partner__c</columns>
    <columns>Rejected__c</columns>
    <columns>Customer_Opt_Out__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>